--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,41 +3,51 @@
 name: Run HR Vision Agent
 
 on:
-  # Запуск по расписанию, каждые 20 минут
   schedule:
     - cron: '*/20 * * * *'
   
-  # Позволяет запускать этот воркфлоу вручную со страницы Actions
   workflow_dispatch:
 
 jobs:
   run-agent:
-    runs-on: ubuntu-latest # Используем последнюю версию Ubuntu
+    runs-on: ubuntu-latest
 
     steps:
     - name: 1. Checkout repository
-      # Скачиваем код из репозитория
       uses: actions/checkout@v4
 
     - name: 2. Set up Python
-      # Устанавливаем нужную версию Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10' # Можете указать вашу версию
+        python-version: '3.10'
 
-    - name: 3. Install dependencies
-      # Устанавливаем библиотеки из requirements.txt
+    # 👇👇👇 ДОБАВЛЕННЫЙ ШАГ ДЛЯ ОТЛАДКИ 👇👇👇
+    - name: 3. Debug secrets
+      run: |
+        echo "GEMINI_API_KEY is set: ${{ env.GEMINI_API_KEY != '' }}"
+        echo "CLOUDFLARE_WORKER_URL is set: ${{ env.CLOUDFLARE_WORKER_URL != '' }}"
+        echo "SUPABASE_URL is set: ${{ env.SUPABASE_URL != '' }}"
+        echo "TELEGRAM_API_ID is set: ${{ env.TELEGRAM_API_ID != '' }}"
+      env:
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        CLOUDFLARE_WORKER_URL: ${{ secrets.CLOUDFLARE_WORKER_URL }}
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
+    # 👆👆👆 КОНЕЦ ОТЛАДОЧНОГО ШАГА 👆👆👆
+
+    - name: 4. Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    - name: 4. Run Python script
-      # Запускаем главный скрипт
+    - name: 5. Run Python script
       run: python main.py
       env:
-        # Передаем секреты в окружение скрипта
+        # Убедитесь, что имена здесь ТОЧНО совпадают с именами в настройках репозитория
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
         TELEGRAM_API_HASH: ${{ secrets.TELEGRAM_API_HASH }}
         SESSION_NAME: ${{ secrets.SESSION_NAME }}
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        CLOUDFLARE_WORKER_URL: ${{ secrets.CLOUDFLARE_WORKER_URL }}
