--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,11 @@ name: Run HR Vision Agent
 
 on:
   schedule:
-    - cron: '*/20 * * * *'
+    # 👇👇👇 ИЗМЕНЕНИЕ ЗДЕСЬ 👇👇👇
+    # Запуск каждые 20 минут, с 9:00 до 16:00 по МСК (что равно 6:00-13:00 UTC)
+    - cron: '*/20 6-13 * * *'
   
+  # Позволяет запускать этот воркфлоу вручную со страницы Actions
   workflow_dispatch:
 
 jobs:
@@ -21,29 +24,14 @@ jobs:
       with:
         python-version: '3.10'
 
-    # 👇👇👇 ДОБАВЛЕННЫЙ ШАГ ДЛЯ ОТЛАДКИ 👇👇👇
-    - name: 3. Debug secrets
-      run: |
-        echo "GEMINI_API_KEY is set: ${{ env.GEMINI_API_KEY != '' }}"
-        echo "CLOUDFLARE_WORKER_URL is set: ${{ env.CLOUDFLARE_WORKER_URL != '' }}"
-        echo "SUPABASE_URL is set: ${{ env.SUPABASE_URL != '' }}"
-        echo "TELEGRAM_API_ID is set: ${{ env.TELEGRAM_API_ID != '' }}"
-      env:
-        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        CLOUDFLARE_WORKER_URL: ${{ secrets.CLOUDFLARE_WORKER_URL }}
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
-    # 👆👆👆 КОНЕЦ ОТЛАДОЧНОГО ШАГА 👆👆👆
-
-    - name: 4. Install dependencies
+    - name: 3. Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    - name: 5. Run Python script
+    - name: 4. Run Python script
       run: python main.py
       env:
-        # Убедитесь, что имена здесь ТОЧНО совпадают с именами в настройках репозитория
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
