--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
-# .github/workflows/main.yml
-
 name: Run HR Vision Agent
 
 on:
   schedule:
-    # 👇👇👇 ИЗМЕНЕНИЕ ЗДЕСЬ 👇👇👇
     # Запуск каждые 15 минут, с 9:00 до 16:00 по МСК (что равно 6:00-13:00 UTC)
     - cron: '*/15 6-13 * * *'
   
@@ -24,12 +21,24 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: 3. Install dependencies
+    # 👇👇👇 ИЗМЕНЕНИЕ ЗДЕСЬ 👇👇👇
+    - name: 3. Cache pip packages
+      uses: actions/cache@v4
+      with:
+        # Путь, который будет кешироваться
+        path: ~/.cache/pip
+        # Ключ для кеша: если requirements.txt не изменился, кеш будет восстановлен
+        key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-python-
+    # 👆👆👆 КОНЕЦ ИЗМЕНЕНИЯ 👆👆👆
+
+    - name: 4. Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    - name: 4. Run Python script
+    - name: 5. Run Python script
       run: python main.py
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
