справил логику подсчета средней зарплаты

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Run HR Vision Agent
 
 on:
-  schedule:
-    # Запуск каждые 15 минут, с 9:00 до 16:00 по МСК (что равно 6:00-13:00 UTC)
-    - cron: '*/15 6-13 * * *'
+#  schedule:
+#    # Запуск каждые 15 минут, с 9:00 до 16:00 по МСК (что равно 6:00-13:00 UTC)
+#    - cron: '*/15 6-13 * * *'
   
   # Позволяет запускать этот воркфлоу вручную со страницы Actions
   workflow_dispatch:
@@ -21,7 +21,6 @@ jobs:
       with:
         python-version: '3.10'
 
-    # 👇👇👇 ИЗМЕНЕНИЕ ЗДЕСЬ 👇👇👇
     - name: 3. Cache pip packages
       uses: actions/cache@v4
       with:
@@ -31,7 +30,6 @@ jobs:
         key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-python-
-    # 👆👆👆 КОНЕЦ ИЗМЕНЕНИЯ 👆👆👆
 
     - name: 4. Install dependencies
       run: |
