--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,32 +21,26 @@ jobs:
       with:
         python-version: '3.10'
 
-    # ШАГ 3 ИЗМЕНЕН: Мы теперь кэшируем установленные пакеты, а не просто загрузки pip
     - name: 3. Cache installed Python packages
-      id: pip-cache # Добавляем id, чтобы ссылаться на этот шаг
+      id: pip-cache
       uses: actions/cache@v4
       with:
-        # Путь к папке, где хранятся установленные пакеты
         path: ~/.local
-        # Ключ кэша зависит от ОС, версии Python и хэша файла requirements.txt
         key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-python-${{ matrix.python-version }}-
 
-    # ШАГ 4 ИЗМЕНЕН: Установка запускается ТОЛЬКО если кэш не был найден
     - name: 4. Install dependencies if cache not found
       if: steps.pip-cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade pip
-        # Устанавливаем пакеты в папку, которую мы кэшируем
         python -m pip install -r requirements.txt --user
 
-    # ШАГ 5 ИЗМЕНЕН: Добавляем путь к установленным пакетам в PATH
     - name: 5. Add user bin to PATH and run script
       run: |
-        # Эта команда нужна, чтобы система нашла исполняемые файлы из установленных пакетов
         echo "$HOME/.local/bin" >> $GITHUB_PATH
-        python main.py
+        # ИЗМЕНЕНИЕ ЗДЕСЬ: добавлен флаг -u
+        python -u main.py
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
@@ -55,4 +49,3 @@ jobs:
         SESSION_NAME: ${{ secrets.SESSION_NAME }}
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         CLOUDFLARE_WORKER_URL: ${{ secrets.CLOUDFLARE_WORKER_URL }}
-
